--- a/worklog/202006.md
+++ b/worklog/202006.md
@@ -69,4 +69,90 @@ vc clusterid clustername
 ## 20200609
 Dsi_admin 加入ROLE_FLAG，ADDRESS字段
 
+资源操作列表
+虚拟机健康状态字段：
 
+---------------------------------------------------------------------------------------------
+##应用选择列表接口
+已经加完
+
+
+##资源选择
+
+配置保存
+----------------------
+/vm/config
+
+cOST_CENTER
+vM_STORAGE
+vM_USE
+rE_NAME
+rESOURCE_TYPE
+vM_SYS_IP
+aDMIN_PHONE
+vM_ADMIN
+aDMIN_EMAIL
+vM_REMARK
+aPP_NAME
+----------------------
+## 20200610
+1. 资产top5（more than 5) --OK
+2. 3级别联动
+地域，区域，VC
+/v1/itemList 
+
+[
+
+ [
+    "北京":[
+        {label:"cluster1+use",
+        value:"cluster1+use"}
+        ],
+    "上海":[
+        label:"cluster1+use",
+        value:"cluster1+use"
+       ]
+
+]
+
+@todo
+----------------------------------------------------
+vminfo虚拟机数据返回数据少
+DISCRIBE 已加
+
+Dsi_admin 加入ROLE_FLAG，ADDRESS字段
+
+JOB
+虚拟机到导出
+虚拟机同步
+
+----------------------------------------------------
+
+3. 存储接口列表
+datacenter:
+│Name                           Port  User
+    
+ │192.168.31.33                  443   VSPHERE.LOCAL\Administrator
+ │
+ │MoRef : Datacenter-datacenter-21
+ │Name  : Datacenter
+
+cluster:
+      │Name                           Port  User
+ │----                           ----  ----
+ │192.168.31.33                  443   VSPHERE.LOCAL\Administrator
+ │
+ │Name  : 3Test_Cluster
+ │MoRef : ClusterComputeResource-domain-c189
+ │
+ │
+ │Name  : 1PaaS_Cloud
+ │MoRef : ClusterComputeResource-domain-c26
+ │
+ │
+ │Name  : 2IaaS_Cluster
+ │MoRef : ClusterComputeResource-domain-c49
+
+
+获取集群存储列表：
+/usr/bin/pwsh -f getdatastorefromcluster.ps1 192.168.31.33 administrator@vsphere.local 1qaz@WSX 
