--- a/worklog/202006.md
+++ b/worklog/202006.md
@@ -122,9 +122,20 @@ DISCRIBE 已加
 
 Dsi_admin 加入ROLE_FLAG，ADDRESS字段
 
+资源操作查询：已经OK
+
 JOB
-虚拟机到导出
-虚拟机同步
+虚拟机到导出 --ok
+虚拟机同步 -- ok
+虚拟机变更--
+
+
+
+
+
+下午：
+//针对特殊操作的处理
+
 
 ----------------------------------------------------
 
@@ -156,3 +167,28 @@ cluster:
 
 获取集群存储列表：
 /usr/bin/pwsh -f getdatastorefromcluster.ps1 192.168.31.33 administrator@vsphere.local 1qaz@WSX 
+
+
+ {
+  "clusterInfo": {
+    "city": "string",
+    "cluster_ID": "string",
+    "cluster_NAME": "string",
+    "cluster_TYPE": "string",
+    "datastore_POSITION": "string",
+    "dns": "string",
+    "network": "string",
+    "portgroup": "string",
+    "sub_MASK": "string",
+    "swg": "string",
+    "use": "string",
+    "vc_PASSWORD": "string",
+    "vc_URL": "string",
+    "vc_USERNAME": "string"
+  },
+  "clusterid": "string",
+  "clustername": "string",
+  "user": "string"
+}
+
+serve
