--- a/devOps/maven/构建生命周期.md
+++ b/devOps/maven/构建生命周期.md
@@ -1,4 +1,9 @@
-    构建生命周期.md
+# 构建生命周期.md
+
+## Maven build recycle : basic(modelVersion,groupId,artifactId,packaging,version) ->properties->dependencies
+->build(pluginManagement)->repositories->distributionManagement
+
+
 ---
     <build>
         <plugins>
