knowlegues tree is scaling 0813

--- a/worklog/202006.md
+++ b/worklog/202006.md
@@ -281,3 +281,36 @@ serve
 
 
   netstat -anop 命令查session进程对应的pid，kill掉
+
+
+  Connect-VIServer -Server 192.168.31.33 -username administrator@vsphere.local -Password 1qaz@WSX
+
+
+#PowerCLI - List All ESXi Hosts Network Info (and Output to CSV)
+
+
+Get-VMHostNetworkAdaptor
+
+Get-VMHostNetworkAdapter | select VMhost, Name, IP, SubnetMask, Mac, PortGroupName, vMotionEnabled, mtu, FullDuplex, BitRatePerSec
+
+Get-VMHostNetworkAdapter | select VMhost, Name, IP, SubnetMask, Mac, PortGroupName, vMotionEnabled, mtu, FullDuplex, BitRatePerSec | Export-Csv C:\VMHostNetworkDetails.csv
+
+
+get-vmhost | get-vm | get-networkadapter |select VMhost, Name, IP, SubnetMask, Mac, PortGroupName, vMotionEnabled, mtu, FullDuplex, BitRatePerSec
+
+
+Get-VMHost -PipelineVariable esx |
+Get-VM -PipelineVariable vm |
+Get-NetworkAdapter |
+Select @{N='VMHost';E={$esx.Name}},
+    @{N='VM';E={$vm.Name}},
+    NetworkName |Sort-Object
+
+
+Get-VMHost -PipelineVariable esx |
+Get-VM -PipelineVariable vm |
+Get-NetworkAdapter |
+Select @{N='VMHost';E={$esx.Name}},
+    @{N='VM';E={$vm.Name}},
+    NetworkName|Sort-Object
+
