--- a/worklog/202006.md
+++ b/worklog/202006.md
@@ -304,7 +304,7 @@ Get-VM -PipelineVariable vm |
 Get-NetworkAdapter |
 Select @{N='VMHost';E={$esx.Name}},
     @{N='VM';E={$vm.Name}},
-    NetworkName |Sort-Object
+    NetworkName |gSort-Object
 
 
 Get-VMHost -PipelineVariable esx |
