--- a/worklog/202006.md
+++ b/worklog/202006.md
@@ -314,3 +314,8 @@ Select @{N='VMHost';E={$esx.Name}},
     @{N='VM';E={$vm.Name}},
     NetworkName|Sort-Object
 
+
+
+Failed to read artifact descriptor for org.glassfish:javax.el:jar:3.0.1-b06-SNAPSHOT
+
+
