--- a/os/linux/常用工具汇总.md
+++ b/os/linux/常用工具汇总.md
@@ -2,11 +2,20 @@
 -----------------------------------------------------------------------
  Linux中Java开发常用的软件总结：
 
- 
+
+ Linux系统类：
+ http://www.linuxboy.net
+
+
+
+截图软件：
+sudo apt-get install flameshot
+
+
 开发工具下载：
 
  
-复制代码
+
 
 Tomcat下载：
 wget http://learning.happymmall.com/tomcat/apache-tomcat-7.0.73.tar.gz
@@ -25,7 +34,7 @@ wget http://download.redis.io/releases/redis-3.2.8.tar.gz
 　　
 wget http://downloads.sourceforge.net/tcl/tcl8.6.1-src.tar.gz
 
-复制代码
+
 
  
 开发工具安装：
