--- a/2020lab/零碎记忆01.md
+++ b/2020lab/零碎记忆01.md
@@ -1,10 +1,63 @@
 #零碎记忆01.md
 
+linux ffmeg : ffplay -autoexit filename.mp4
+
+Ubuntu安装播放mp4格式视频（安装ffmpeg）
+
+Ubuntu播放MP4视频文件时缺少mpeg4 blabla h.246 decoder，可安装ffmpeg解决该问题。
+步骤：
+
+    安装snapd，终端命令：
+
+        sudo apt-get install snapd
+
+    安装ffmpeg
+
+        sudo snap install ffmpeg
+        sudo add-apt-repository ppa:jonathonf/ffmpeg-4
+        sudo apt-get update
+        sudo apt-get install ffmpeg
+
+    查看ffmpeg
+
+        ff[TAB][TAB]
+
+    可看到：ffmpeg.ffplay ffplay
+
+    使用ffmpeg打开mp4视频文件‘
+
+        ffplay -autoexit filename.mp4
+
+    说明：
+        autoexit表示播放结束后自动退出
+        filename.mp4为文件名
+
+
+
 ***
-
-
 
  [Hash = 229678212, stageId=null, subject=集群匹配检测, result=null, status=0, createTime=2020-11-12, consumeTime=null, id=8f1eaa480e744a0f812ad32eeb10ce9f, updateTime=null, serialVersionUID=1]
 
 
  [Hash = 1594904102, stageId=53c196cbcd934944b7f4fa82c4c9cbc3, subject=集群匹配检测, result=null, status=0, createTime=2020-11-12, consumeTime=null, id=f1a1798477e34ffe806f92f46d66b194, updateTime=null, serialVersionUID=1]
+
+ ##  mvn install 出错： 
+ HK2 service reification failed for [org.glassfish.jersey.message.internal.DataSourceProvider] with an exception:
+
+
+## 入门学习资源
+
+<<The little Schemer>>
+
+
+
+
+## School 
+https://www.w3resource.com/index.php
+
+
+
+
+
+
+
